fix(docs, swagger, exchanges): add new POST method for messages read, document it, and fix caddyfile
